Fixed spacing issue

--- a/src/components/experience/experience.sass
+++ b/src/components/experience/experience.sass
@@ -3,9 +3,6 @@
   margin-top: 32px
   @include linear-background(-60deg, $bgradients, $bgradiente)
   // box-shadow: 0 2px 5px 1px rgba(0,0,0,0.3)
-  .container-content
-    padding: 16px 10px
-    text-align: left
   .heading
     margin-bottom: 8px
   .experience
