--- a/src/components/footer/footer.sass
+++ b/src/components/footer/footer.sass
@@ -2,7 +2,7 @@
   color: #fff
   margin-top: 32px
   text-align: center
-  padding: 60px 0
+  padding: 40px 0
   @include linear-background(-60deg, $bgradients, $bgradiente)
   span
     color: $pink
