--- a/src/sass/config.sass
+++ b/src/sass/config.sass
@@ -13,3 +13,6 @@
   -webkit-box-sizing: border-box
   -moz-box-sizing: border-box
   box-sizing: border-box
+
+.sec-card
+  padding: 16px 10px
